# winapi

./: CMakeLists.txt  win32_console.hpp  win32_debugger.hpp  win32_handle.hpp  win32_utils.hpp
include/winapi/: console  console.h  debugger  debugger.h  handle  utils  utils.h
